뉴스레터 CSS파일 변경한 test html 추가

--- a/assets/htmls/gcrc_news_letter_20200820.html
+++ b/assets/htmls/gcrc_news_letter_20200820.html
@@ -28,7 +28,7 @@
   <!-- 상단에 공지사항/한세연 소식 부분 시작 -->
   <div class="subscribe_btn text-right">
    <a class="font-18 bold subscribe" href="https://forms.gle/MJ5gVHCdunBXXWVB7">
-    <img alt="" src="./img/subscribe.png"/>
+    <img alt="" src="https://gcrcenter.github.io/assets/images/subscribe.png"/>
     뉴스레터구독
    </a>
   </div>
