뉴스레터 제21-06호 내용 일부 수정

--- a/assets/htmls/gcrc_news_letter_20210122.html
+++ b/assets/htmls/gcrc_news_letter_20210122.html
@@ -709,7 +709,7 @@
               <tr>
                <td class="info" style="padding:0;font-size:15px;padding-top:2px;padding-bottom:2px;">
                 <a class="a_info" href="http://www.yes24.com/Product/Goods/96788666" style="text-decoration:none; font-size:15px;color:#4a4a4a; width:100%; max-width:350px;" target="_blank">
-                 재미사마-[출간소식]우리는 중년의 삶이 재밌습니다
+                 표현하는인생연구소-[출간소식]우리는 중년의 삶이 재밌습니다
                 </a>
                </td>
               </tr>
